--- a/site/src/components/Header.module.scss
+++ b/site/src/components/Header.module.scss
@@ -1,14 +1,22 @@
 @import "../mixins/media.scss";
 
+.header {
+    position: fixed;
+    z-index: 9;
+    top: 0;
+    left: 0;
+}
+
 .wrapper {
     padding: 35px;
-    position: absolute;
+    // position: absolute;
     z-index: 1;
 }
 
 .logo {
-    max-width: 160px;
-    height: 50px;
+    // max-width: 160px;
+    width: 60px;
+    height: 60px;
 }
 
 @include tablet {
