--- a/site/src/mixins/transitions.scss
+++ b/site/src/mixins/transitions.scss
@@ -4,6 +4,12 @@
     transition: 0.3s;
 }
 
+@mixin transition-slow {
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+
 @mixin transition-transform {
     -webkit-transition: transform 700ms cubic-bezier(0.965, 0.025, 0.485, 0.945), margin 700ms cubic-bezier(0.965, 0.025, 0.485, 0.945);
     -o-transition: transform 700ms cubic-bezier(0.965, 0.025, 0.485, 0.945), margin 700ms cubic-bezier(0.965, 0.025, 0.485, 0.945);
