--- a/site/src/components/Home/Feature.module.scss
+++ b/site/src/components/Home/Feature.module.scss
@@ -1,7 +1,9 @@
 .inner {
-    max-width: 350px;
+    max-width: 415px;
     margin: 0 auto;
+    padding: 35px;
 }
+
 
 .feature1 {
     position: relative;
@@ -28,5 +30,38 @@
 
     .inner {
         margin-top: -100px;
+    }
+}
+
+.feature3 {
+    .wrapper {
+        padding-left: 0;
+    }
+
+    .image {
+        padding-bottom: 35px;
+    }
+
+    .left {
+        margin-top: 150px;
+    }
+
+    .right {
+        margin-top: -100px;
+
+        &>.image:first-child {
+            max-width: 350px;
+        }
+
+    }
+
+    @supports (display: grid) {
+        .image_grid {
+            grid-template-columns: 1fr 2fr;
+        }
+    }
+
+    .inner {
+        margin-top: -350px;
     }
 }
