--- a/site/src/variables/typography.scss
+++ b/site/src/variables/typography.scss
@@ -152,12 +152,17 @@ h3 {
 
 .text-6xl {
   // 88px
-  font-size: 5.5rem;
+  font-size: 6vw;
   line-height: 1;
 }
 
 
 @include desktop {
+  .text-6xl {
+    // 88px
+    font-size: 5.5rem;
+  }
+
   .text-2xl {
     font-size: 5rem;
     line-height: 6rem;
