--- a/site/src/styles.scss
+++ b/site/src/styles.scss
@@ -236,30 +236,6 @@ a {
   width: 20%;
 }
 
-.pad_lg {
-  padding-top: 150px;
-  padding-bottom: 150px;
-}
-
-.pad {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.pad_md {
-  padding-top: 85px;
-  padding-bottom: 85px;
-}
-
-.pad_sm {
-  padding-top: 65px;
-  padding-bottom: 65px;
-}
-
-.no_pad_top {
-  padding-top: 0;
-}
-
 .wrapper {
   position: relative;
   width: 100%;
@@ -300,11 +276,44 @@ a {
   }
 }
 
+.pad_lg {
+  padding-top: 150px;
+  padding-bottom: 150px;
+}
+
+.pad {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.pad_md {
+  padding-top: 85px;
+  padding-bottom: 85px;
+}
+
+.pad_sm {
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+
+.no_pad_top {
+  padding-top: 0;
+}
+
+.no_pad_left {
+  padding-left: 0;
+}
+
+.no_pad_right {
+  padding-right: 0;
+}
+
 em,
 strong {
   position: relative;
   font-weight: inherit;
   font-style: inherit;
+  display: inline-block;
 }
 
 .overlay {
